fixing slider overlap

--- a/src/styles/components/swiper.scss
+++ b/src/styles/components/swiper.scss
@@ -5,7 +5,3 @@
 .swiper-button-disabled {
   @apply opacity-20;
 }
-.swiper-slide,
-.swiper-slide {
-  width: auto !important;
-}
